# mod_receta

./: AUTHORS  NEWS  README  Readme.md  autogen.sh  configure.ac  delete.sh
src/: Makefile.am  logp.h  mod_receta.c  mod_receta.h  sql.c  sql.h  test.c
